[gd_scene load_steps=29 format=2]

[ext_resource path="res://scenes/Game/States/Quit.gd" type="Script" id=1]
[ext_resource path="res://scenes/barrel/barrel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/pipeline/pipeline.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemies/EnemySpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/helpers/HelperSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Game/States/Init.gd" type="Script" id=7]
[ext_resource path="res://scenes/Game/test_.gd" type="Script" id=8]
[ext_resource path="res://scenes/Game/States/LoadLevel.gd" type="Script" id=9]
[ext_resource path="res://scenes/Game/States/Play.gd" type="Script" id=10]
[ext_resource path="res://scenes/Game/States/DrawLevel.gd" type="Script" id=11]
[ext_resource path="res://scenes/Game/States/LevelComplete.gd" type="Script" id=12]
[ext_resource path="res://scenes/Game/States/LevelReset.gd" type="Script" id=13]
[ext_resource path="res://fonts/pipeline_font.tres" type="DynamicFont" id=14]
[ext_resource path="res://scenes/Game/hud.gd" type="Script" id=15]
[ext_resource path="res://scenes/Game/States/Intermission.gd" type="Script" id=16]
[ext_resource path="res://scenes/Game/States/Title.gd" type="Script" id=17]
[ext_resource path="res://scenes/TitleObjects/Lobster/Lobster.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/TitleObjects/Rocket/Rocket.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/TitleObjects/Taskset/Taskset.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/TitleObjects/TitleText.tscn" type="PackedScene" id=21]
[ext_resource path="res://music/01_Opening & BGM #3.ogg" type="AudioStream" id=22]
[ext_resource path="res://music/02_Get Ready!.ogg" type="AudioStream" id=23]
[ext_resource path="res://music/03_BGM #1.ogg" type="AudioStream" id=24]

[sub_resource type="Animation" id=1]
resource_name = "Active"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("lblScore:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.584314, 0.0627451, 0.0627451, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Inactive"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("lblScore:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Active"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("lblScore:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.584314, 0.0627451, 0.0627451, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Inactive"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("lblScore:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Test_Scene" type="Node2D"]
script = ExtResource( 8 )
oPlayer = ExtResource( 3 )
oPipeline = ExtResource( 4 )
oEnemySpawner = ExtResource( 5 )
oHelperSpawner = ExtResource( 6 )
oBarrel = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="States" type="Node" parent="."]

[node name="Init" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="LoadLevel" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="DrawLevel" type="Node" parent="States"]
script = ExtResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="States/DrawLevel"]
stream = ExtResource( 23 )

[node name="Play" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="States/Play"]
stream = ExtResource( 24 )

[node name="Quit" type="Node" parent="States"]
script = ExtResource( 1 )

[node name="LevelComplete" type="Node" parent="States"]
script = ExtResource( 12 )

[node name="LevelReset" type="Node" parent="States"]
script = ExtResource( 13 )

[node name="Intermission" type="Node" parent="States"]
script = ExtResource( 16 )

[node name="Title" type="Node" parent="States"]
script = ExtResource( 17 )
oRocket = ExtResource( 19 )
oTaskSet = ExtResource( 20 )
oLobster = ExtResource( 18 )
oTitleText = ExtResource( 21 )

[node name="level" type="Node" parent="."]

[node name="enemies" type="Node" parent="."]

[node name="helpers" type="Node" parent="."]

[node name="players" type="Node" parent="."]

[node name="hud" type="Container" parent="."]
visible = false
margin_left = 10.0
margin_top = 30.0
margin_right = 1910.0
rect_min_size = Vector2( 1900, 140 )
rect_pivot_offset = Vector2( -575.263, -228.421 )
size_flags_vertical = 0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainHud" type="VBoxContainer" parent="hud"]
margin_right = 1900.0
margin_bottom = 174.0
rect_min_size = Vector2( 1900, 150 )
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TopLine" type="HBoxContainer" parent="hud/MainHud"]
margin_right = 1900.0
margin_bottom = 85.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="PL1_Score" type="VBoxContainer" parent="hud/MainHud/TopLine"]
margin_right = 550.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 550, 0 )
size_flags_vertical = 0
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="hud/MainHud/TopLine/PL1_Score"]
anims/Active = SubResource( 1 )
anims/Inactive = SubResource( 2 )

[node name="lblScore" type="Label" parent="hud/MainHud/TopLine/PL1_Score"]
margin_right = 550.0
margin_bottom = 38.0
grow_vertical = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PL 1"
align = 1
max_lines_visible = 1

[node name="Score" type="Label" parent="hud/MainHud/TopLine/PL1_Score"]
margin_top = 42.0
margin_right = 550.0
margin_bottom = 80.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 14 )
text = "000000"
align = 1

[node name="HI_Score" type="VBoxContainer" parent="hud/MainHud/TopLine"]
margin_left = 554.0
margin_right = 1104.0
margin_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 550, 85 )
alignment = 1

[node name="lblScore" type="Label" parent="hud/MainHud/TopLine/HI_Score"]
margin_top = 2.0
margin_right = 550.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 14 )
text = "HI SCORE"
align = 1

[node name="Score" type="Label" parent="hud/MainHud/TopLine/HI_Score"]
margin_top = 44.0
margin_right = 550.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 14 )
text = "000000"
align = 1

[node name="PL2_Score" type="VBoxContainer" parent="hud/MainHud/TopLine"]
margin_left = 1108.0
margin_right = 1658.0
margin_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 550, 85 )
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="hud/MainHud/TopLine/PL2_Score"]
anims/Active = SubResource( 3 )
anims/Inactive = SubResource( 4 )

[node name="lblScore" type="Label" parent="hud/MainHud/TopLine/PL2_Score"]
margin_top = 2.0
margin_right = 550.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PL  2"
align = 1

[node name="Score" type="Label" parent="hud/MainHud/TopLine/PL2_Score"]
margin_top = 44.0
margin_right = 550.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 14 )
text = "000000"
align = 1

[node name="BottomLine" type="HBoxContainer" parent="hud/MainHud"]
margin_top = 89.0
margin_right = 1900.0
margin_bottom = 127.0
grow_vertical = 0
rect_min_size = Vector2( 620, 0 )
size_flags_vertical = 0

[node name="PL1_Lives" type="HBoxContainer" parent="hud/MainHud/BottomLine"]
margin_right = 550.0
margin_bottom = 38.0
rect_min_size = Vector2( 550, 38 )
alignment = 1

[node name="lblLives" type="Label" parent="hud/MainHud/BottomLine/PL1_Lives"]
margin_left = 198.0
margin_right = 304.0
margin_bottom = 38.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.584314, 0.0627451, 0.0627451, 1 )
text = "LIVES  "

[node name="Lives" type="Label" parent="hud/MainHud/BottomLine/PL1_Lives"]
margin_left = 308.0
margin_right = 352.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.584314, 0.0627451, 0.0627451, 1 )
text = "00"

[node name="LevelName" type="HBoxContainer" parent="hud/MainHud/BottomLine"]
margin_left = 554.0
margin_right = 1104.0
margin_bottom = 38.0
rect_min_size = Vector2( 550, 38 )
alignment = 1

[node name="Name" type="Label" parent="hud/MainHud/BottomLine/LevelName"]
margin_left = 180.0
margin_right = 369.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 14 )
text = "Level Name "
align = 1

[node name="PL2_Lives" type="HBoxContainer" parent="hud/MainHud/BottomLine"]
margin_left = 1108.0
margin_right = 1658.0
margin_bottom = 38.0
rect_min_size = Vector2( 550, 38 )
alignment = 1

[node name="lblLives" type="Label" parent="hud/MainHud/BottomLine/PL2_Lives"]
margin_left = 198.0
margin_right = 304.0
margin_bottom = 38.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.584314, 0.0627451, 0.0627451, 1 )
text = "LIVES  "

[node name="Lives" type="Label" parent="hud/MainHud/BottomLine/PL2_Lives"]
margin_left = 308.0
margin_right = 352.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.584314, 0.0627451, 0.0627451, 1 )
text = "00"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 865, 515 )
current = true
zoom = Vector2( 0.9, 0.9 )
